# ArxivFeed

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config-example.toml
.github/workflows/: CICD.yml
src/: config.rs  fetch.rs  main.rs  query.rs  render.rs  rhai_ext.rs  structs.rs  utils.rs
src/core/: fetch.rs  mod.rs  query.rs  structs.rs
src/v1/: mod.rs  render.rs  rhai_ext.rs  sturcts.rs  utils.rs
