[package]
name = "arxivfeed"
version = "0.1.3"
edition = "2021"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
license = "GPL-2.0"
description = "Turn GitHub into an Arxiv reader."
homepage = "https://github.com/NotCraft/ArxivFeed"
repository = "https://github.com/NotCraft/ArxivFeed"
keywords = ["shell", "server", "rss"]
exclude = [".github"]

[dependencies]
anyhow = "1"
xml-rs = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"

rhai = "1"
regex = "1"

serde_json = "1"
fs_extra = "1.2.0"
indexmap = { version = "1", features = ["serde"] }
figment = { version = "0.10", features = ["toml"] }
tokio = { version = "1.3.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "4", features = ["script_helper", "dir_source"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }
